k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-svc
spec:
  selector:
    app: wisecow
  ports:
    - port: 80
      targetPort: 4499
  type: ClusterIP
